[package]
name = "curate-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres",  "chrono" ] }
reqwest = { version = "0.11", default-features = true, features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
csv = "1.1"
