[package]
name = "curate-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curate-import = { path = "../curate-data-import"}

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
warp = { version = "0.3" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
chrono = { version = "0.4", features = ["serde"] }
cfg-if = "1.0"

[features]
dev = []
prod = []